	-----
	2653,Sacrifice_Ring: seems eAthena doesn't have bonus option yet <- explain how this works so I can code it in. [Skotlex]
		* * * On your death it breaks (BS can fix it), you drop all Equipment (equipped, even the ring). And revive with 1 HP / 1 SP at the place of your death.
		* * * From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP [Komurka]

12/23
	* Corrected the Critical Race bonus of the Sabbath and cleaned up the
	  script of Morphicious' Hood. [Skotlex]
	* Added 1 sec cast time to Stone Curse [Komurka]
	* Added missing Amon Ra skills (he won't be so lame anymore) [Komurka]
	* Some fixes thx to Poki#3 [Komurka]
	* Desert Wolf Babe -> Baby Desert Wolf (iRO), thx to Poki#3 [Komurka]
	* Fixed the drops of RSX 0806, thanks to Poki#3 [MasterOfMuppets]
12/22
	* Added back the changebase script to Tuxedo. [Skotlex]
	* Changed the autospell chance of Lude card from 2% to 20%. [MasterOfMuppets]
	* Changed pest card to get its additional bonus if you have 77 int or [MasterOfMuppets]
	  higher instead of 77 and higher.
12/21
	* Item_DB update for Tuesday's kRO sakray update. Temp plugs. [Vicious]
	  - THQ Quest Items needs new item number!!!!

12/20
	* Set up some basic skill info for SKA/SKE/SWOO [Skotlex]
	* Moved item requirements for Aqua Benedicta to produce_db. [Skotlex]
	* A small fix to sucsamad [MasterOfMuppets]
	* Moved item requirements for Create Deadly Poison from skill_require_db to
	  produce_db [Skotlex]
12/19
	* Jewel sword will now drop jewels as intended, fixed a typo in sucsamad, [MasterOfMuppets]
	  thanks to Ishizu-chan.
	* Fixed 1613,Mighty Staff to give 10 str instead of 15. [Kayla]
12/18
	* Updated 1725,Wondering Bard's Bow applicable jobs and item bonus [Lupus]
12/17
	* Removed 10% Neutral Damage Resistance from Golden Gear [Komurka]
12/16
	* Added effects to 12112,Tropical_Sograt and 12113,Vermilion_the_Beach. Thanks to persian69 [Lupus]